# windows_select

./: LICENSE.md  README.md  pyproject.toml  test_requirements.txt
.github/actions/my-python-action/: action.yml
.github/workflows/: python-package.yml  python-reusable.yml
src/windows_select/: __init__.py  check_fd_type.py  get_fd.py  select.py  select_function.py
src/windows_select/selectable_objects/: __init__.py  selectable_file.py  selectable_object.py  selectable_pipe.py
src/windows_select/selectors/: base_select_object.py  ctypes_winapi.py  file_select.py  pipe_select.py  select_manager.py  socket_select.py
tests/: conftest.py
tests/systemtests/: test_select.py
tests/unittests/: conftest.py  test_check_fd_type.py  test_pipe_queries.py
tests/unittests/test_selectors/: conftest.py  test_pipe_selector.py  test_select_manager.py
