[build-system]
requires = ["setuptools", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "windows_select"
description = "An implementation for select in Windows"
readme = "README.md"
requires-python = ">=3.8"
version = "1.0.0"
