[build-system]
requires = ["setuptools", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "windows_select"
description = "An implementation for select in Windows"
version="0.1.0"
authors = [
    {name = "Eyal Rosemarin", email = "eyal.rosemarin@gmail.com"}
]
maintainers = [
    {name = "Eyal Rosemarin", email = "eyal.rosemarin@gmail.com"}
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
]
license= {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/EyalR12/windows_select"
